--- a/episodes.html
+++ b/episodes.html
@@ -34,6 +34,44 @@
           </nav>
     </header>
 
+    <hr/>
+
+    <div class='welcome'>
+	 
+	    <h1>Episodes</h1>
+
+	    <div class='all-episodes'>
+
+	    <div class='episode-container'>
+		    <h3>E01 "An Unexpected Podcast"</h3>
+		    <p>Join our hosts for the very first time as they discuss the direction of this podcast, their history with the Lord of the Rings, and the importance of the fantasy genre. Listen as they discuss the first chapter of the Hobbit and the beauty of Martin Freeman as Bilbo Baggins.</p>
+	    </div>
+
+	    <div class='episode-container'>
+		    <h3>E02 "From Bilbo to Bilbro"</h3>
+		    <p>Join our hosts as they talk about Bilbo's changes in the Hobbit. They dicuss Tookish blood and what drives Bilbo towards adventure. Was he really as homely as the beginning of the book made it seem, or was Bilbo always the rebel of Hobbiton?</p>
+	    </div>
+
+	    <div class='episode-container'>
+		    <h3>E03 "Questionable Riddles in the Dark"</h3>
+		    <p>Join our hosts as they tackle the ethics of Bilbo's final riddle with Gollum. Are all questions riddles? Is Bilbo really the bad guy of this story? He is a buglar after all. Our hosts also have a riddle battle of their own.</p>
+	    </div>
+	 </div>
+
+    </div>
+
+     <hr/>
+
+     <div class='welcome'>
+                        <h2>Contact</h2>
+                        <ul>
+                                <li>secondbreakfast@gmail.com</li>
+                                <li>@whataboutsecondbreakfast</li>
+                                <li><a class='big-links' href="https://github.com/wijams/podcast">Git Hub Repository</a></li>
+                        </ul>
+                </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         </body>
 </html>
