--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
           </nav>
     </header>
 
+    		<hr/>
+
     		<div class="photo">
 			<img src="https://cdn.stocksnap.io/img-thumbs/960w/6B3VYEQOGI.jpg">
 		</div>
 
 		<div class="welcome">
-			<h2>A podcast about all things Lord of the Rings</h2>
+			<h2>A Podcast About All Things Lord of the Rings</h2>
 			<h3><a class='big-links' href="episodes.html">Start Listening</a></h3>
 			<p>Episodes every Friday wherever podcasts can be found</p>
 		</div>
@@ -71,7 +73,9 @@
 			<ul>
 				<li>secondbreakfast@gmail.com</li>
 				<li>@whataboutsecondbreakfast</li>
+				<li><a class='big-links' href="https://github.com/wijams/podcast">Git Hub Repository</a></li>
 			</ul>
+		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	</body>
