--- a/lore.html
+++ b/lore.html
@@ -34,7 +34,43 @@
           </nav>
     </header>
 
+    <hr/>
+
+    <div class='welcome'>
+	    <h1>The Lore of the Rings</h1>
+    </div>
+
     <img src='https://ids.si.edu/ids/deliveryService?id=CHSDM-155625_01'/>
+
+    <div class='welcome'>
+	    <h2>Real World Connections</h2>
+	    <p>Explore the real world connections to the stories</p>
+    </div>
+
+    <img src='https://live.staticflickr.com/5053/5571529873_82a731f3ea_b.jpg'/>
+
+    <div class='welcome'>
+	    <h2>The Characters</h2>
+	    <p>Read extensive bios about each character and the races of Middle Earth</p>
+    </div>
+
+    <img src='https://live.staticflickr.com/7491/16296571715_b3ebde1e38_b.jpg'/>
+
+    <div class='welcome'>
+	    <h2>The Locations</h2>
+	    <p>Learn more about the locations of the books and their historical context</p>
+    </div>
+
+     <hr/>
+
+     <div class='welcome'>
+                        <h2>Contact</h2>
+                        <ul>
+                                <li>secondbreakfast@gmail.com</li>
+                                <li>@whataboutsecondbreakfast</li>
+                                <li><a class='big-links' href="https://github.com/wijams/podcast">Git Hub Repository</a></li>
+                        </ul>
+                </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         </body>
