--- a/merchandise.html
+++ b/merchandise.html
@@ -34,6 +34,50 @@
           </nav>
     </header>
 
+    <hr/>
+
+    <div class='welcome'>
+	    <h1>Second Breakfast Merch</h1>
+    </div>
+
+    <div class='welcome'>
+      <div class='all-merch'>
+    	<div class='merch-container'>
+    		<img src='https://cdn.stocksnap.io/img-thumbs/960w/NOXXUWUBGJ.jpg'>
+		<h3>Second Breakfast Hot Chocolate</h3>
+		<p>$5.99</p>
+		<p>Hot chocolate made from real Swiss chocolate in the fires of Mount Doom</p>
+    	</div>
+
+	<div class='merch-container'>
+		<img class='oversize-pic' src='https://live.staticflickr.com/65535/49081723491_bf86311c7d.jpg'>
+		<h3>Generic Beanie?</h3>
+		<p>$12.99</p>
+		<p>Is it generic, or is just like the ring? It seems ordinary, but when you put it on...</p>
+	</div>
+
+	<div class='merch-container'>
+		<img src='https://cdn.pixabay.com/photo/2021/06/18/10/39/mug-6345793_1280.jpg'>
+		<h3>The One Mug</h3>
+		<p>$19.99</p>
+		<p>One mug to rule them all, one mug to find them, one mug to bring them all, and in the darkness bind them; in the Land of Morder where the shadows lie.</p>
+	</div>
+       </div>
+
+     </div>
+
+     <hr/>
+
+     <div class='welcome'>
+                        <h2>Contact</h2>
+                        <ul>
+                                <li>secondbreakfast@gmail.com</li>
+                                <li>@whataboutsecondbreakfast</li>
+                                <li><a class='big-links' href="https://github.com/wijams/podcast">Git Hub Repository</a></li>
+                        </ul>
+                </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         </body>
 </html>
